Improve nav, add second blog post

--- a/public/404.html
+++ b/public/404.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Page Not Found</title>
+		<title>Not Found · Joe Weel</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="/css/style.css" />
 	</head>
 	<body>
+        <input id="night" type="checkbox" checked aria-label="toggle alternate colors" />
 		<article>
 			<main>
 				<div class="box">
