Change first blog post even though I said I wouldn't

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
                     <span aria-label="internal links">
                         <a rel="prefetch" href="/">Joe Weel</a>
                         <a rel="prefetch" href="/blog">Blog</a>
-                        <a href="/pdf/cv_2023.pdf">Resume</a>
+                        <a href="/resume">Resume</a>
                     </span>
                     <span aria-label="external links">
                         <a href="mailto:joe@weel.dev">✉</a>
