--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                     <span aria-label="external links">
                         <a href="mailto:joe@weel.dev">✉</a>
                         <a id="nav-github" href="https://github.com/JWeel"><img alt="GitHub"/></a>
-                        <a id="nav-linkedin" href="https://linkedin.com/in/joe-weel-dev/"><img alt="LinkedIn"/></a>
+                        <a id="nav-linkedin" href="https://linkedin.com/in/joe-weel/"><img alt="LinkedIn"/></a>
                     </span>
                 </nav>
 			</header>
