--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,14 @@
 				<div class="welcome">
 					<h1> Welcome! </h1>
 					<p>
-						<b>I</b> am Joe Weel - backend software engineer; mentor; husband.
+						<b>I</b> am Joe Weel - backend software engineer; mentor; husband; father.
 						<br />
-						This is my personal website. It has a <a class="accent" rel="prefetch" href="/blog">blog</a>, and that's about it.
+						This is my personal website. It has a <a class="accent" rel="prefetch" href="/blog">blog</a>, links to my GitHub and resume, and that's about it.
 					</p>
 					<p>
 						This website has no tracking, no ads, no cookies, and no client-side scripts.
 						<br />
-						I did this not for lack of knowledge, but because I like the challenge of simplicity.
+						I did this not for lack of knowledge, but because I like the challenge that comes from simplicity.
 					</p>
 					<p>
 						I hope you enjoy your stay.
